Updated Day 1 lesson

--- a/010201_Warmup.md
+++ b/010201_Warmup.md
@@ -11,13 +11,13 @@ layout: default
 
 ## Activity
 
-Each of you have been given a packet. On the last page fill out the following info, you will have 10 minutes. 
+Create a name card and complete the "About Me" page. (10 minutes)
 
 1. Your Name
 1. What school you attend
 1. What you hope to learn this weekend
 1. Something in your every day life that uses computer code that you could not live without
 
-When asked to do so, pair and share what you wrote.  
+When you are finished, share what you wrote with your neighbor.  
 
-Now, we will go around the room and you will introduce your buddy. 
+When everyone is done, you will introduce your neighbor. 
