Simplify Watch some more

--- a/020401_Watch.md
+++ b/020401_Watch.md
@@ -8,12 +8,17 @@ layout: default
 ## Time to plan our design
 Pseudode
 1. Create variables for time (empty string), hours (0), minutes (0), ampm (String "AM")
-2. Set Hour: When A button is pressed, if hour variable is less than 23, add one to hour, else set hour to zero.
-3. Set Minutes: When B button is pressed, if minute variable is less than 23, add one to minute, else set minute to zero.
-4. Set AM/PM: When A + B buttons pressed, change from am to pm or vice versa. Display "AM" or "PM"
-5. Change from 12 Hour Format to 24 Hour Format or vice versa.
-6. Keep time: Pause 60 seconds (6000 ms). If minutes variable is less than 59, add one to minutes, else set minutes to zero. If hours variable is less than 
-7. Display time: On shake, display time variable as hh:mm am/pm. Then clear the screen.
+2. Set Hour: When A button is pressed, if hour variable is less than 23, add one to hour, else set hour to zero. 
+   1. Display Hour. 
+   2. Clear Screen.
+3. Set Minutes: When B button is pressed, if minute variable is less than 23, add one to minute, else set minute to zero. 
+   1. Display Minutes. 
+   2. Clear Screen.
+4. Set AM/PM: When A + B buttons pressed, change from am to pm or vice versa. 
+   1. Display "AM" or "PM". 
+   2. Clear Screen.
+5. Keep time: Pause 60 seconds (6000 ms). If minutes variable is less than 59, add one to minutes, else set minutes to zero. If hours variable is less than 
+6. Display time: On shake, display time variable as hh:mm am/pm. Then clear the screen.
 
 
 ## Make the  variables
