Update Watch. Organize

--- a/020401_Watch.md
+++ b/020401_Watch.md
@@ -8,7 +8,7 @@ layout: default
 ## Time to plan our design
 Pseudode
 1. Create variables for time (empty string), hours (0), minutes (0), ampm (String "AM")
-2. Set Hour: When A button is pressed, if hour variable is less than 23, add one to hour, else set hour to zero. 
+2. Set Hour: When A button is pressed, if hour variable is less than 23, add one to hour, else set hour to 1. 
    1. Display Hour. 
    2. Clear Screen.
 3. Set Minutes: When B button is pressed, if minute variable is less than 23, add one to minute, else set minute to zero. 
@@ -17,7 +17,10 @@ Pseudode
 4. Set AM/PM: When A + B buttons pressed, change from am to pm or vice versa. 
    1. Display "AM" or "PM". 
    2. Clear Screen.
-5. Keep time: Pause 60 seconds (6000 ms). If minutes variable is less than 59, add one to minutes, else set minutes to zero. If hours variable is less than 
+5. Keep time: 
+   1. Pause 60 seconds (6000 ms). 
+   2. If minutes variable is less than 60, add one to minutes, else set minutes to zero. 
+   3. If hours variable is less than 12, add one to hours, else set hours to zero.
 6. Display time: On shake, display time variable as hh:mm am/pm. Then clear the screen.
 
 
