Bullets on Watch

--- a/020401_Watch.md
+++ b/020401_Watch.md
@@ -21,7 +21,9 @@ Pseudode
    1. Pause 60 seconds (6000 ms). 
    2. If minutes variable is less than 60, add one to minutes, else set minutes to zero. 
    3. If hours variable is less than 12, add one to hours, else set hours to zero.
-6. Display time: On shake, display time variable as hh:mm am/pm. Then clear the screen.
+6. Display time: 
+   1. On shake, display time variable as hh:mm am/pm. 
+   2. Clear the screen.
 
 
 ## Make the  variables
